--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "axios": "^0.21.4",
     "chart.js": "^3.5.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
